--- a/woorischool/Views/Cells/BoardListTableViewCell.xib
+++ b/woorischool/Views/Cells/BoardListTableViewCell.xib
@@ -27,7 +27,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kof-sD-Ls8" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="102"/>
+                        <rect key="frame" x="13" y="0.0" width="294" height="102"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="6Ur-CT-LHX">
                                 <rect key="frame" x="20" y="20" width="62" height="62"/>
@@ -37,19 +37,19 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAa-c3-yMs">
-                                <rect key="frame" x="94" y="25" width="42" height="20"/>
+                                <rect key="frame" x="94" y="25" width="44" height="25.5"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="17"/>
                                 <color key="textColor" name="greyishBrown"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강사명" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXM-ly-1Ng">
-                                <rect key="frame" x="94" y="61.5" width="34" height="15.5"/>
+                                <rect key="frame" x="94" y="57.5" width="36" height="19.5"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
                                 <color key="textColor" name="brownGrey"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fe-hw-LQL" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
-                                <rect key="frame" x="267" y="25" width="33" height="20"/>
+                                <rect key="frame" x="241" y="28" width="33" height="20"/>
                                 <color key="backgroundColor" name="grapefruit"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="S80-eP-ual"/>
@@ -65,20 +65,20 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h43-48-t8W">
-                                <rect key="frame" x="134" y="61.5" width="32" height="15.5"/>
+                                <rect key="frame" x="136" y="57.5" width="34.5" height="19.5"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="13"/>
                                 <color key="textColor" name="greyishBrown"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3LR-2H-SEB">
-                                <rect key="frame" x="266.5" y="60.5" width="10" height="18"/>
+                                <rect key="frame" x="239.5" y="58.5" width="10" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="FZ6-Bn-eca"/>
                                     <constraint firstAttribute="width" constant="10" id="rHb-dv-uJD"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0명" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RoK-bl-8xe">
-                                <rect key="frame" x="281.5" y="61.5" width="18.5" height="15.5"/>
+                                <rect key="frame" x="254.5" y="57.5" width="19.5" height="19.5"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
                                 <color key="textColor" name="greyishBrown"/>
                                 <nil key="highlightedColor"/>
@@ -119,8 +119,8 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="kof-sD-Ls8" secondAttribute="trailing" id="11U-em-cmt"/>
-                    <constraint firstItem="kof-sD-Ls8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="aiZ-7t-g75"/>
+                    <constraint firstAttribute="trailing" secondItem="kof-sD-Ls8" secondAttribute="trailing" constant="13" id="11U-em-cmt"/>
+                    <constraint firstItem="kof-sD-Ls8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="13" id="aiZ-7t-g75"/>
                     <constraint firstItem="kof-sD-Ls8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="cDz-wZ-G8S"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kof-sD-Ls8" secondAttribute="bottom" constant="10" id="suW-4s-ca8"/>
                 </constraints>
