--- a/woorischool/Views/Cells/BoardReplyTableViewCell.xib
+++ b/woorischool/Views/Cells/BoardReplyTableViewCell.xib
@@ -24,14 +24,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="rN7-4d-wHD">
-                        <rect key="frame" x="20" y="5.5" width="35" height="35"/>
+                        <rect key="frame" x="20" y="52.5" width="35" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="LNm-4G-qwO"/>
                             <constraint firstAttribute="width" constant="35" id="bD1-Rw-fkT"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WWe-EV-C9o" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                        <rect key="frame" x="62" y="0.0" width="238" height="46"/>
+                        <rect key="frame" x="62" y="0.0" width="238" height="140"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgB-K0-LzQ">
                                 <rect key="frame" x="13" y="5" width="32" height="15.5"/>
@@ -39,21 +39,44 @@
                                 <color key="textColor" name="brownGrey"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labelffsafsadfasfasfadsfsafa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRx-8l-RiX">
-                                <rect key="frame" x="13" y="25.5" width="212" height="15.5"/>
-                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="wxt-Db-byO">
+                                <rect key="frame" x="13" y="25.5" width="212" height="109.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labelffsafsadfasfasfadsfsafa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRx-8l-RiX">
+                                        <rect key="frame" x="0.0" y="0.0" width="212" height="15.5"/>
+                                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="USh-u2-K9X">
+                                        <rect key="frame" x="0.0" y="27.5" width="212" height="82"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="q19-h4-XT6">
+                                                <rect key="frame" x="0.0" y="0.0" width="82" height="82"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="q19-h4-XT6" secondAttribute="height" multiplier="1:1" id="zhB-cb-DA0"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="82" id="UoE-ia-puH"/>
+                                            <constraint firstItem="q19-h4-XT6" firstAttribute="top" secondItem="USh-u2-K9X" secondAttribute="top" id="bS9-30-xlM"/>
+                                            <constraint firstItem="q19-h4-XT6" firstAttribute="leading" secondItem="USh-u2-K9X" secondAttribute="leading" id="ckU-Aj-HXi"/>
+                                            <constraint firstAttribute="bottom" secondItem="q19-h4-XT6" secondAttribute="bottom" id="iQ0-1W-rqL"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" name="veryLightPinkTwo"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="zRx-8l-RiX" secondAttribute="trailing" constant="13" id="Fhf-yv-sne"/>
+                            <constraint firstItem="wxt-Db-byO" firstAttribute="leading" secondItem="WWe-EV-C9o" secondAttribute="leading" constant="13" id="2OB-Iw-Rlx"/>
                             <constraint firstItem="lgB-K0-LzQ" firstAttribute="top" secondItem="WWe-EV-C9o" secondAttribute="top" constant="5" id="Lv1-e4-b01"/>
-                            <constraint firstAttribute="bottom" secondItem="zRx-8l-RiX" secondAttribute="bottom" constant="5" id="Pca-W3-bL5"/>
-                            <constraint firstItem="zRx-8l-RiX" firstAttribute="leading" secondItem="WWe-EV-C9o" secondAttribute="leading" constant="13" id="UK7-WS-meJ"/>
-                            <constraint firstItem="zRx-8l-RiX" firstAttribute="top" secondItem="lgB-K0-LzQ" secondAttribute="bottom" constant="5" id="hZY-Nw-iqj"/>
+                            <constraint firstItem="wxt-Db-byO" firstAttribute="top" secondItem="lgB-K0-LzQ" secondAttribute="bottom" constant="5" id="gF2-g7-tFl"/>
+                            <constraint firstAttribute="bottom" secondItem="wxt-Db-byO" secondAttribute="bottom" constant="5" id="jfQ-p7-dAl"/>
                             <constraint firstItem="lgB-K0-LzQ" firstAttribute="leading" secondItem="WWe-EV-C9o" secondAttribute="leading" constant="13" id="shC-J9-VIh"/>
+                            <constraint firstAttribute="trailing" secondItem="wxt-Db-byO" secondAttribute="trailing" constant="13" id="zsa-XT-Y86"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
@@ -62,13 +85,13 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019.03.21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s50-3g-7dF">
-                        <rect key="frame" x="98.5" y="46" width="60.5" height="14"/>
+                        <rect key="frame" x="98.5" y="140" width="60.5" height="14"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
                         <color key="textColor" name="brownGrey"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wtT-y1-UE8">
-                        <rect key="frame" x="169" y="48" width="1" height="10"/>
+                        <rect key="frame" x="169" y="142" width="1" height="10"/>
                         <color key="backgroundColor" name="brownGrey"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="10" id="4wx-jO-RNk"/>
@@ -76,7 +99,7 @@
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HR8-fH-QUB">
-                        <rect key="frame" x="182" y="40" width="118" height="26"/>
+                        <rect key="frame" x="182" y="134" width="118" height="26"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLz-1i-sWA">
                                 <rect key="frame" x="0.0" y="0.0" width="30" height="26"/>
@@ -122,6 +145,8 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="contentLabel" destination="zRx-8l-RiX" id="CpJ-jp-hL9"/>
+                <outlet property="imageContainerView" destination="USh-u2-K9X" id="cro-aF-Eaz"/>
+                <outlet property="messageImageView" destination="q19-h4-XT6" id="0Az-RK-LWG"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="150.66964285714286"/>
         </tableViewCell>
