--- a/woorischool/Views/Cells/ReReplyTableViewCell.xib
+++ b/woorischool/Views/Cells/ReReplyTableViewCell.xib
@@ -16,22 +16,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="136" id="KGk-i7-Jjw" customClass="ReReplyTableViewCell" customModule="우리스쿨" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="136"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="215" id="KGk-i7-Jjw" customClass="ReReplyTableViewCell" customModule="우리스쿨" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="215"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="136"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="215"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="replyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Hde-3a-Fzf">
-                        <rect key="frame" x="0.0" y="14" width="18" height="18"/>
+                        <rect key="frame" x="0.0" y="55" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="ZqW-Rn-Bgg"/>
                             <constraint firstAttribute="height" constant="18" id="vjU-dD-9SH"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w9J-QZ-APZ" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                        <rect key="frame" x="71" y="0.0" width="249" height="46"/>
+                        <rect key="frame" x="71" y="0.0" width="249" height="128"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-qr-Q3h">
                                 <rect key="frame" x="13" y="5" width="32" height="15.5"/>
@@ -39,21 +39,44 @@
                                 <color key="textColor" name="brownGrey"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labelffsafsadfasfasfadsfsafa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwX-sO-hMX">
-                                <rect key="frame" x="13" y="25.5" width="223" height="15.5"/>
-                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="AzZ-lT-ZeD">
+                                <rect key="frame" x="13" y="25.5" width="216" height="97.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labelffsafsadfasfasfadsfsafa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwX-sO-hMX">
+                                        <rect key="frame" x="0.0" y="0.0" width="216" height="15.5"/>
+                                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdF-L4-aMR">
+                                        <rect key="frame" x="0.0" y="15.5" width="216" height="82"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fiM-a8-WRg">
+                                                <rect key="frame" x="0.0" y="0.0" width="82" height="82"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="fiM-a8-WRg" secondAttribute="height" multiplier="1:1" id="Psj-XN-Vmj"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="fiM-a8-WRg" firstAttribute="leading" secondItem="hdF-L4-aMR" secondAttribute="leading" id="2N1-I5-wUC"/>
+                                            <constraint firstAttribute="height" constant="82" id="Iow-o3-n5A"/>
+                                            <constraint firstItem="fiM-a8-WRg" firstAttribute="top" secondItem="hdF-L4-aMR" secondAttribute="top" id="Vct-UN-bGw"/>
+                                            <constraint firstAttribute="bottom" secondItem="fiM-a8-WRg" secondAttribute="bottom" id="wHG-ha-soF"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" name="veryLightPinkTwo"/>
                         <constraints>
+                            <constraint firstItem="AzZ-lT-ZeD" firstAttribute="leading" secondItem="w9J-QZ-APZ" secondAttribute="leading" constant="13" id="IHA-Va-WoL"/>
                             <constraint firstItem="g8V-qr-Q3h" firstAttribute="leading" secondItem="w9J-QZ-APZ" secondAttribute="leading" constant="13" id="Meg-Th-XNN"/>
-                            <constraint firstAttribute="trailing" secondItem="uwX-sO-hMX" secondAttribute="trailing" constant="13" id="gEQ-NP-s9J"/>
-                            <constraint firstAttribute="bottom" secondItem="uwX-sO-hMX" secondAttribute="bottom" constant="5" id="hJu-d7-nXx"/>
+                            <constraint firstAttribute="trailing" secondItem="AzZ-lT-ZeD" secondAttribute="trailing" constant="20" id="bgP-Vm-8xx"/>
+                            <constraint firstAttribute="bottom" secondItem="AzZ-lT-ZeD" secondAttribute="bottom" constant="5" id="khh-jo-dGg"/>
                             <constraint firstItem="g8V-qr-Q3h" firstAttribute="top" secondItem="w9J-QZ-APZ" secondAttribute="top" constant="5" id="mHy-mP-Hxn"/>
-                            <constraint firstItem="uwX-sO-hMX" firstAttribute="leading" secondItem="w9J-QZ-APZ" secondAttribute="leading" constant="13" id="nEL-pc-HfR"/>
-                            <constraint firstItem="uwX-sO-hMX" firstAttribute="top" secondItem="g8V-qr-Q3h" secondAttribute="bottom" constant="5" id="s0x-EQ-CNx"/>
+                            <constraint firstItem="AzZ-lT-ZeD" firstAttribute="top" secondItem="g8V-qr-Q3h" secondAttribute="bottom" constant="5" id="rPP-kY-ddo"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
@@ -62,14 +85,14 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="zkV-gG-r6o">
-                        <rect key="frame" x="29" y="5.5" width="35" height="35"/>
+                        <rect key="frame" x="29" y="46.5" width="35" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="Zwi-ks-sRV"/>
                             <constraint firstAttribute="width" constant="35" id="fGs-ny-MPt"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019.03.21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEm-xz-HKW">
-                        <rect key="frame" x="260" y="46" width="60" height="14"/>
+                        <rect key="frame" x="259.5" y="128" width="60.5" height="14"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
                         <color key="textColor" name="brownGrey"/>
                         <nil key="highlightedColor"/>
@@ -90,7 +113,7 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="114.49275362318842" y="59.598214285714285"/>
+            <point key="canvasLocation" x="114.49275362318842" y="86.049107142857139"/>
         </tableViewCell>
     </objects>
     <resources>
