--- a/woorischool/Views/Global/ModalViews/BoardListViewController.xib
+++ b/woorischool/Views/Global/ModalViews/BoardListViewController.xib
@@ -8,16 +8,10 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="NotoSansCJKkr-Medium.otf">
-            <string>NotoSansCJKkr-Medium</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BoardListViewController" customModule="우리스쿨" customModuleProvider="target">
             <connections>
                 <outlet property="boardTableView" destination="7kV-LC-0yh" id="WVy-b6-OJe"/>
-                <outlet property="boardTableViewConstraintHeight" destination="bei-x3-17H" id="E13-0I-9HW"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -26,77 +20,28 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gXA-8E-T7J">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="7kV-LC-0yh">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FjQ-VV-fNm">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="539"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="게시판 목록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SHF-eg-daI">
-                                    <rect key="frame" x="20" y="200" width="83" height="21"/>
-                                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="18"/>
-                                    <color key="textColor" name="greyishBrown"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7kV-LC-0yh">
-                                    <rect key="frame" x="13" y="229" width="388" height="300"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="300" id="bei-x3-17H"/>
-                                    </constraints>
-                                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <connections>
-                                        <outlet property="dataSource" destination="-1" id="ULK-sG-y3Z"/>
-                                        <outlet property="delegate" destination="-1" id="16C-fK-jKG"/>
-                                    </connections>
-                                </tableView>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0td-Pb-zck" customClass="EmoInputView" customModule="우리스쿨" customModuleProvider="target">
-                                    <rect key="frame" x="20" y="20" width="374" height="160"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                </view>
-                            </subviews>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstItem="SHF-eg-daI" firstAttribute="leading" secondItem="FjQ-VV-fNm" secondAttribute="leading" constant="20" id="7Z4-Ha-86i"/>
-                                <constraint firstItem="0td-Pb-zck" firstAttribute="top" secondItem="FjQ-VV-fNm" secondAttribute="top" constant="20" id="9Xk-2J-DNt"/>
-                                <constraint firstItem="0td-Pb-zck" firstAttribute="leading" secondItem="FjQ-VV-fNm" secondAttribute="leading" constant="20" id="F9K-ba-lAf"/>
-                                <constraint firstItem="7kV-LC-0yh" firstAttribute="top" secondItem="SHF-eg-daI" secondAttribute="bottom" constant="8" id="Huj-sb-fdj"/>
-                                <constraint firstItem="7kV-LC-0yh" firstAttribute="leading" secondItem="FjQ-VV-fNm" secondAttribute="leading" constant="13" id="Ma2-LC-sgy"/>
-                                <constraint firstItem="SHF-eg-daI" firstAttribute="top" secondItem="FjQ-VV-fNm" secondAttribute="top" constant="200" id="NeL-Sw-gPp"/>
-                                <constraint firstAttribute="trailing" secondItem="0td-Pb-zck" secondAttribute="trailing" constant="20" id="gLK-eD-c2b"/>
-                                <constraint firstAttribute="trailing" secondItem="7kV-LC-0yh" secondAttribute="trailing" constant="13" id="u1L-HT-LfN"/>
-                                <constraint firstItem="SHF-eg-daI" firstAttribute="top" secondItem="0td-Pb-zck" secondAttribute="bottom" constant="20" id="vdL-IN-FBe"/>
-                                <constraint firstAttribute="bottom" secondItem="7kV-LC-0yh" secondAttribute="bottom" constant="10" id="xRz-xd-YMF"/>
-                            </constraints>
-                        </view>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstItem="FjQ-VV-fNm" firstAttribute="trailing" secondItem="yOx-1I-gGO" secondAttribute="trailing" id="EFc-gz-1sU"/>
-                        <constraint firstItem="FjQ-VV-fNm" firstAttribute="width" secondItem="Tuj-wZ-Lv5" secondAttribute="width" id="H0w-qZ-AAn"/>
-                        <constraint firstItem="FjQ-VV-fNm" firstAttribute="top" secondItem="yOx-1I-gGO" secondAttribute="top" id="HFV-fy-vOV"/>
-                        <constraint firstItem="FjQ-VV-fNm" firstAttribute="bottom" secondItem="yOx-1I-gGO" secondAttribute="bottom" id="IEm-Dq-EfS"/>
-                        <constraint firstItem="FjQ-VV-fNm" firstAttribute="leading" secondItem="yOx-1I-gGO" secondAttribute="leading" id="ZLs-hx-hnL"/>
-                    </constraints>
-                    <viewLayoutGuide key="contentLayoutGuide" id="yOx-1I-gGO"/>
-                    <viewLayoutGuide key="frameLayoutGuide" id="Tuj-wZ-Lv5"/>
-                </scrollView>
+                    <color key="backgroundColor" name="paleGrey"/>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="ULK-sG-y3Z"/>
+                        <outlet property="delegate" destination="-1" id="16C-fK-jKG"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" name="paleGrey"/>
             <constraints>
-                <constraint firstItem="gXA-8E-T7J" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="aRS-vw-493"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gXA-8E-T7J" secondAttribute="trailing" id="ayB-Ts-zPG"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="gXA-8E-T7J" secondAttribute="bottom" id="gqK-p3-KXq"/>
-                <constraint firstItem="gXA-8E-T7J" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="xV9-k9-mvs"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7kV-LC-0yh" secondAttribute="trailing" id="21E-6Y-qQ3"/>
+                <constraint firstItem="7kV-LC-0yh" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="BUg-OE-nhw"/>
+                <constraint firstItem="7kV-LC-0yh" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="HwK-P8-Nax"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="7kV-LC-0yh" secondAttribute="bottom" id="Ta7-at-V6Z"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="93.75"/>
         </view>
     </objects>
     <resources>
-        <namedColor name="greyishBrown">
-            <color red="0.29019607843137257" green="0.29019607843137257" blue="0.29019607843137257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="paleGrey">
             <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
